test-suite/bugs/bug_3556.v
Section S.
Require TestSuite.hurkens. Import hurkens.
End S.
Fail Check Generic.paradox.

Section S.
  Require Import TestSuite.hurkens.
End S.
Fail Check Generic.paradox.
